[package]
name = "photoshop-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement"] }
js-sys = "0.3"

wgpu = { version = "0.19", features = ["webgl"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
glam = "0.27"
log = "0.4"

console_log = "1.0"
console_error_panic_hook = "0.1"