[package]
name = "lime"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.31"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document", "Element"] }
