[workspace]
resolver = "2"
members = ["crates/core", "crates/app", "crates/lime"]
default-members = ["crates/lime"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.31"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
] }
slotmap = "1"
